css change instagram distortion fix

--- a/basilspap/styles/style-main.css
+++ b/basilspap/styles/style-main.css
@@ -238,7 +238,7 @@ footer .social img{
 .insta img, .facebook img, .twitter img {
     padding: 65px;
     width: 50%;
-    height: 142px;
+    height: 170px;
 }
 
 .twitter a{
